--- a/real-hp.css
+++ b/real-hp.css
@@ -13,23 +13,23 @@ body {
     max-width: 100%;
     margin: 0 auto;
     /* padding: 0 40px; */
-    display: flex;
-    justify-content: space-around;
+    /* display: flex; */
+    /* justify-content: space-around; */
     background: white;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     /* position: sticky; */
-    top: 0;
+    /* top: 0; */
     /* z-index: 1000; */
 }
 
 /* Navbar Section */
 .nav-section {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    /* align-items: center; */
+    justify-content: center;
     padding: 12px 0;
     max-width: 1400px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
+    /* gap: 20px; */
 }
 
 /* Logo */
@@ -53,7 +53,7 @@ body {
 
 .nav-link {
     text-decoration: none;
-    color: #333;
+    color: gray;
     font-size: 20px;
     font-weight: 500;
     padding: 8px 12px;
@@ -136,6 +136,7 @@ body {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-left: 5cm;
 }
 
 /* Search Bar */
@@ -147,17 +148,17 @@ body {
 
 .nav-search-bar i {
     position: absolute;
-    left: 12px;
+    right: 12px;
     color: #666;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .nav-search-bar input {
-    padding: 8px 12px 8px 35px;
+    padding: 8px 8px 8px 20px;
     border: 1px solid #ddd;
-    border-radius: 20px;
-    font-size: 13px;
-    width: 200px;
+    font-size: 16px;
+    width: 420px;
+    height: 45px;
     transition: border-color 0.3s ease;
 }
 
@@ -172,7 +173,6 @@ body {
     color: #333;
     cursor: pointer;
     padding: 8px;
-    transition: color 0.3s ease;
 }
 
 .nav-shop-icon:hover {
@@ -182,19 +182,16 @@ body {
 /* Login Button */
 .login-button {
     text-decoration: none;
-    color: #333;
+    background-color: black;
+    color: white;
     font-size: 14px;
     font-weight: 500;
     padding: 8px 16px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
     transition: all 0.3s ease;
 }
 
 .login-button:hover {
-    background-color: #f8f9fa;
-    border-color: #0096D6;
-    color: #0096D6;
+    background-color: gray;
 }
 
 .lower-navbar
@@ -214,10 +211,96 @@ body {
 {
     text-decoration: none;
     color: white;
-    font-size: 17px;
+    font-size: 16px;
     padding: 8px 12px;
     border-radius: 4px;
     gap: 10px;
+}
+
+.lower-nav-link i
+{
+    margin-left: 5px;
+    rotate: 90deg;
+}
+
+.lower-nav-link:hover i
+{
+    rotate: 270deg;
+}
+
+.lower-nav-link::after
+{
+    content: "";
+    position: absolute;
+    left: 8px;
+    bottom: 0px;
+    top: 23px;
+    width: 0%;
+    height: 3px;
+    background: white;
+}
+
+.lower-nav-link.active::after
+{
+    width: 90%;
+}
+
+.lower-nav-link:hover::after
+{
+    background: gray;
+    width: 90%;
+}
+
+.lower-nav-dropdown
+{
+    position: absolute;
+    z-index: 9999;
+    top: 100%;
+    left: 0;
+    background-color: white;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    min-width: 280px;
+    padding: 10px 0;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-10px);
+    list-style: none;
+}
+
+.lower-nav-sublink
+{
+    display: block;
+    padding: 12px 25px;
+    color: black;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 1.6;
+    font-weight: 400;
+    text-align: left;
+}
+
+/* .lower-nav-sublink::after
+{
+    content: "";
+    position: absolute;
+    left: 8px;
+    bottom: 0px;
+    top: 23px;
+    width: 0%;
+    height: 3px;
+    background: rgb(215, 0, 0);
+} */
+
+.lower-nav-sublink:hover
+{
+    border-bottom: solid 4px silver;
+}
+
+.lower-nav-item:hover .lower-nav-dropdown {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    display: block;
 }
 
 .container1
@@ -227,75 +310,237 @@ body {
     max-width: 1200px;   
     margin: 0 auto;      
     padding: 20px; 
-    line-height: 1.6;
+    line-height: 1.8;
+    font-family: Forma DJR UI;
+}
+
+.container1 h3
+{
+    font-weight: 400;
+    color: gray;
+}
+
+.container1 h1
+{
+    font-weight: 400;
+    font-size: 40px;
 }
 
 .container2
 {
 
-    border: 2px solid;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     box-sizing: border-box;
     display: flex;
     height: fit-content;
     max-height: 100%;
     padding: 20px;
-    padding-inline: 40px;
+    padding-inline: 70px;
     justify-content: space-between;
     gap: 30px;
 }
 
 .box1 {
     width: 100%;
-    padding: 20px;
-    background-color: #2196f3;
     border: 1px solid;
-    height: fit-content;
+    height: 40vh;
+    max-height: 40vmax;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    overflow: hidden;
 }
 
 .box2 {
     width: 100%;
-    padding: 20px;
-    background-color: #3e607c;
     border: 1px solid;
-    height: fit-content;
+    height: 20%;
+    height: 40vh;
+    max-height: 40vmax;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    overflow: hidden;
 }
 
 .box3 {
     width: 100%;
-    padding: 20px;
-    background-color: #045191;
     border: 1px solid;
-    height: fit-content;
+    height: 40vh;
+    max-height: 40vmax;
+    text-decoration: none;
+    color: black;
+    position: relative;
+    overflow: hidden;
 }
-  
-.container3
+
+.backgroud-colour-box1
 {
-    background-color: lightblue;
+    background-image: url('https://support.hp.com/wcc-assets/content/dam/hp-wcc/headless-assets/images/image/SWD_Tile.jpg');
+    height: 100%;
+    max-height: 15vmax;
+    border-bottom: 1px solid;
+}
+
+.backgroud-colour-box1, .backgroud-image-box2, .backgroud-image-box3
+{
+    background-size: cover;
+    background-position: center;
+    transition: transform 0.2s ease;
+}
+
+.backgroud-colour-box1:hover, .backgroud-image-box2:hover, .backgroud-image-box3:hover
+{
+    transform: scale(1.05);
+}
+
+.box1 p
+{
+    font-size: 20px;
+    text-align: left;
+    height: auto;
+    display: block;
+    position: relative;
+    margin: 0;
+    top: 0px;
+    padding: 14px 20px;
+    position: static;
+    /* border-top: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding-top: 20px;
+    padding-left: 20px;
+    font-size: 20px; */
+}
+
+/* .box1 img
+{
+    float: right;
+    padding-right: 20px;
+    padding-top: 10px;
+} */
+
+.backgroud-image-box2
+{
+    height: 100%;
+    max-height: 15vmax;
+    border-bottom: 1px solid;
+    background-image: url('https://support.hp.com/wcc-assets/content/dam/hp-wcc/headless-assets/images/image/Printer_new.jpg');
+}
+
+.box2 p
+{
+    /* padding-top: 20px;
+    padding-left: 20px;
+    font-size: 20px; */
+    font-size: 20px;
+    text-align: left;
+    height: auto;
+    display: block;
+    position: relative;
+    margin: 0;
+    top: 0px;
+    padding: 14px 20px;
+    position: static;
+    /* border-top: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box2:hover, .box3:hover, .box1:hover
+{
+    background-color: rgb(135, 206, 235, 0.2);
+}
+
+
+
+.backgroud-image-box3
+{
+    height: 100%;
+    max-height: 15vmax;
+    border-bottom: 1px solid;
+    background-image: url('https://support.hp.com/wcc-assets/content/dam/hp-wcc/headless-assets/images/image/computer_new.jpg');
+}
+
+.box3 p
+{
+    font-size: 20px;
+    text-align: left;
+    height: auto;
+    display: block;
+    position: relative;
+    margin: 0;
+    top: 0px;
+    padding: 14px 20px;
+    position: static;
+    /* border-top: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding-top: 20px;
+    padding-left: 20px;
+    font-size: 20px; */
+}
+
+/* .container3
+{
+    background-color: #ebf9ff;
     padding: 20px;
     display: flex;
     justify-content: center;
-    gap: 50px;
-    align-items: baseline;
-
+    gap: 23px;
+    align-items: center;
+    position: static;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .container3  p
 {
     font-size: 20px;
+} */
+
+.container3 {
+    background-color: #ebf9ff;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Ubah dari baseline ke center */
+    gap: 23px;
+    position: static;
+    text-align: center;
+    vertical-align: middle;
+    flex-wrap: wrap; /* Tambahkan untuk responsive */
 }
+
+.container3 p {
+    font-size: 18px;
+    margin: 0; /* Hilangkan margin default */
+    white-space: nowrap; /* Agar text tidak wrap */
+}
+
+.container3 a {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: all 0.3s ease;
+    white-space: nowrap; /* Agar text tidak wrap */
+}
+
 
 .container4
 {
-
-    border: 2px solid;
+    border-top: 1px solid;
     margin: 0 auto;
     box-sizing: border-box;
     display: flex;
     height: fit-content;
     max-height: 100%;
-    padding: 20px;
-    padding-inline: 40px;
+    padding: 70px;
     justify-content: space-between;
     gap: 30px;
 }
@@ -305,19 +550,44 @@ body {
     width: 100%;
     border: 1px solid;
     height: 35vh;
-    
+    text-decoration: none;
+    color: black;
 }
+
+.box-one-to-three p
+{
+    text-align: left;
+    height: auto;
+    /* display: block; */
+    position: relative;
+    margin: 0;
+    top: 0px;
+    padding: 14px 20px;
+    position: static;
+    /* border-top: 1px solid; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* vertical-align: middle; */
+}
+
+.box-one-to-three:hover
+{
+    background-color: rgb(0, 255, 255, 0.1);
+}
+
 
 .box-four
 {
     width: 100%;
-    padding: 20px;
     height: 35vh;
+    padding-left: 20px;
 }
 
 .box-four h3
 {
     font-weight: 100;
+    font-size: 20px;
 }
 
 .icon-box
@@ -331,4 +601,464 @@ body {
 {
     padding: 20px;
     font-size: 20px;
+}
+
+.container5
+{
+    border: 1px solid;
+    border-right: none;
+    margin: 0 auto;
+    box-sizing: border-box;
+    height: fit-content;
+    max-height: 100%;
+    padding: 20px;
+    padding-bottom: 80px;
+    padding-inline: 70px;
+}
+
+.title-box h1
+{
+    font-weight: 100;
+    font-size: 36px;
+}
+
+.title-box
+{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.content-wrapper
+{
+    height: fit-content;
+    max-height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-finder
+{
+    border-right: 1px solid;
+    width: 50%;
+}
+
+.finder-search-section
+{
+    line-height: 2.6;
+}
+
+.search-box {
+    position: relative;      
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.search-box input
+{
+    padding-left: 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-right: 80px;
+    background-color: transparent;
+    border: 1px solid gray;
+    font-size: medium;
+    width: 490px;
+    max-width: 490px;
+}
+
+.search-box i
+{
+    position: absolute;
+    right: 15px;           
+    top: 50%;               
+    transform: translateY(-50%);
+    color: gray;
+    font-size: 16px;
+    pointer-events: none;  
+    opacity: 0.7;
+}
+
+.detect-device-section button
+{
+    padding : 12px 28px;
+    background-color: transparent;
+    border: 1px solid;
+    font-size: 16px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.detect-device-section button:hover
+{
+    background-color: rgb(135, 206, 235, 0.2);
+}
+
+
+.dds-link-text
+{
+    margin-left: 30px;
+    color: black;
+}
+
+.detect-device-section
+{
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+.pfinder a
+{
+    background-image: url(poly-sign-in.svg);
+    background-repeat: no-repeat;
+    padding: 7px 40px;
+}
+
+.link-text
+{
+    color: #0278ab;
+    list-style: none;
+}
+
+.link-text:hover
+{
+    color: #02476b;
+}
+
+.help-section
+{
+    margin-right: 4cm;
+}
+
+.help-section p
+{
+    margin-bottom: 20px;
+}
+
+.product-list-li
+{
+    line-height: 2.6;
+}
+
+.Aprinter
+{
+    background-image: url(icons/30-p-finder-printer.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    padding: 7px 35px;
+}
+
+.Alaptop
+{
+    background-image: url(icons/laptop.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    padding: 7px 35px;
+}
+
+.Adesktop
+{
+    background-image: url(icons/Desktop.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    padding: 7px 35px;
+}
+
+.Apoly-product
+{
+    background-image: url(icons/Headset.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    padding: 7px 35px;
+}
+
+.Aother
+{
+    background-image: url(icons/Monitor.svg);
+    background-repeat: no-repeat;
+    width: 30px;
+    height: 30px;
+    padding: 7px 35px;
+}
+
+.container6
+{
+    border: 1px solid;
+    border-right: none;
+    margin: 0 auto;
+    box-sizing: border-box;
+    height: fit-content;
+    max-height: 100%;
+    padding: 20px;
+    padding-bottom: 80px;
+    padding-inline: 70px;
+}
+
+.enter-a-topic
+{
+    margin-bottom: 32px;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 48px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.hp-footer {
+    background: #000;
+    color: white;
+    padding: 40px 60px;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
+
+.hp-region {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 15px;
+    color: white;
+    list-style: none;
+    text-decoration: none;
+}
+
+.hp-region span
+{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.hp-footer hr {
+    border: 0.5px solid white;
+    margin: 18px 0;
+}
+
+.hp-footer-menu {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.list-header
+{
+    margin-bottom: 8px;
+}
+
+.hp-footer-menu ul {
+    list-style: none;
+    padding: 0;
+    line-height: 26px;
+}
+
+.hp-footer-menu li:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* SOCIAL ICON */
+.hp-footer-menu .social i {
+    font-size: 22px;
+    margin-right: 12px;
+    cursor: pointer;
+}
+
+/* BOTTOM INLINE LINKS */
+.hp-footer-links {
+    margin: 15px 0;
+    text-align: left;
+}
+
+.hp-footer-links a {
+    color: white;
+    text-decoration: none;
+    padding: 0 4px;
+}
+.hp-footer-links a:hover {
+    text-decoration: underline;
+}
+
+.hp-copy {
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.chat-bot
+{
+    height: 48px;
+    position: fixed;
+    bottom: 0;
+    z-index: 1000;
+    background-color: black;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: none;
+    right: 10px;
+    min-width: 244px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    border: 0;
+    text-decoration: none;
+    outline: 0 !important;
+    transition: background-color .1s ease-in-out;
+}
+
+.chat-bot:hover
+{
+    background-color: #02476b;
+    opacity: 0.9;
+}
+
+.bot-image-container
+{
+    padding-left: 16px;
+}
+
+.bot-image-container img
+{
+    height: 24px;
+    width: 24px;
+}
+
+.bot-text
+{
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    padding-right: 20px;
+}
+
+.feedback-button
+{
+    position: fixed;
+    visibility: hidden;
+    inset: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin: 0px;
+    padding: 0px;
+    z-index: 2000000002;
+}
+
+.feedback-button button
+{
+    position: fixed;
+    visibility: visible;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    padding: 0px;
+    margin: 0px;
+    bottom: 217px;
+    right: -1px;
+    width: 35px;
+    transition: 0.5s;
+}
+
+.button-background
+{
+    background: rgb(2, 74, 216);
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    z-index: -1;
+    writing-mode: vertical-rl;
+    transform: rotateZ(180deg);
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.notification-container
+{
+    display: inline-block;
+    align-items: center;
+    position: fixed;
+    width: 100px;
+    overflow: hidden;
+    top: 122px;
+    z-index: 50;
+}
+
+.notification-list
+{
+    position: fixed;
+    top: 72px;
+    bottom: auto;
+    right: 0;
+    font-size: 14px;
+    background-color: #f2f2f2;
+    border-radius: 1px 0 0 1px;
+    -webkit-border-radius: 1px 0px 0px 1px;
+    -moz-border-radius: 1px 0px 0px 1px;
+    z-index: 999;
+    -webkit-transition: left none !important;
+    display: flex;
+    flex-direction: column;
+}
+
+.bell-icon
+{
+    font-size: 14px;
+    list-style: none;
+}
+
+.bell
+{
+    display: block;
+    color: #165dba !important;
+    padding: 10px;
+    border: 1px solid #CCCCCC;
+    margin-bottom: -1px;
+}
+
+.bell i
+{
+    font-size: 16px;
+}
+
+.notification
+{
+    margin-bottom: 1cm;
+    width: 14px;
+    line-height: 13px;
+    font-size: 11px;
+    height: 13px;
+    background-color: #d7410b;
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    margin-left: 10px;
+    text-align: center;
+    bottom: 18px;
+}
+
+.print-icon
+{
+    font-size: 14px;
+    list-style: none;
+}
+
+.print
+{
+    display: block;
+    color: #165dba !important;
+    padding: 10px;
+    border: 1px solid #CCCCCC;
+    margin-bottom: -1px;
+}
+
+.print i
+{
+    display: inline-block;
+    text-align: center;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 16px;
 }
